<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.melissaeppersonc196.scheduler.UI.MainActivity">

    <Button
        android:id="@+id/termsButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="59dp"
        android:backgroundTint="#1549CA"
        android:onClick="termsScreen"
        android:text="@string/view_terms"
        app:layout_constraintBottom_toTopOf="@+id/coursesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/coursesButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#1549CA"
        android:onClick="coursesScreen"
        android:text="@string/view_courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsButton" />

    <Button
        android:id="@+id/assessmentsButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="#1549CA"
        android:onClick="assessmentsScreen"
        android:text="@string/view_assessments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="186dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="102dp"
        android:contentDescription="@string/graduation_cap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_school_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="134dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>